Limit CSS properties of spelling highlight
Before, we had set the whole background, which interfered with things
search highlighting.  Now we only set the necessary properties to get
the red squiggly line.

--- a/css/spelling.css
+++ b/css/spelling.css
@@ -1,3 +1,5 @@
 .CodeMirror .cm-spell-error {
-  background: url(underline.png) bottom repeat-x;
+  background-image: url(underline.png);
+  background-position: bottom;
+  background-repeat: repeat-x;
 }
