Highlight misspelled words only if they are likely to be prose
The default mode highlights only words in strings in comments.  An
alternate markup language mode highlight most text, but leaves out
formatting commands.  This is handled in CSS; spell checking is still
performed on each word.

As a result, we can remove the hack to exclude TeX macros.

Refs #5.

--- a/css/spelling.css
+++ b/css/spelling.css
@@ -1,4 +1,8 @@
-.CodeMirror .cm-spell-error {
+.CodeMirror:not(.spelling-markup) .cm-spell-error.cm-comment,
+.CodeMirror:not(.spelling-markup) .cm-spell-error.cm-string,
+.CodeMirror:not(.spelling-markup) .cm-spell-error.cm-string-2,
+.CodeMirror.spelling-markup .cm-spell-error:not(.cm-atom):not(.cm-attribute):not(.cm-tag):not(.cm-number):not(.cm-variable-2):not(.cm-string)
+{
   background-image: url(underline.png);
   background-position: bottom;
   background-repeat: repeat-x;
